k8s/ingress-vcs.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ide-design-vcs
  namespace: ide-ux-designers
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-prod
    nginx.ingress.kubernetes.io/ssl-redirect: "true"
    nginx.ingress.kubernetes.io/auth-url: "http://oauth2-proxy-jb.ingress-nginx.svc.cluster.local:4180/oauth2/auth"
    nginx.ingress.kubernetes.io/auth-signin: "https://$host/oauth2/start?rd=$escaped_request_uri"
    nginx.ingress.kubernetes.io/auth-cache-key: "$remote_addr$cookie__oauth2_proxy"
    nginx.ingress.kubernetes.io/auth-cache-duration: "200 202 10m, 401 1m"
spec:
  ingressClassName: nginx
  tls:
    - hosts:
        - ide-design.labs.jb.gg
      secretName: ide-design-labs-jb-gg-tls
  rules:
    - host: ide-design.labs.jb.gg
      http:
        paths:
          - path: /vcs
            pathType: Prefix
            backend:
              service:
                name: ide-design-vcs
                port:
                  number: 80
